# cookiecutter-huggingface-datasets

./: README.md  cookiecutter.json
.github/workflows/: ci.yaml
huggingface-datasets_{{ cookiecutter.dataset_name }}/: README.md  pyproject.toml  {{ cookiecutter.dataset_name }}.py
huggingface-datasets_{{ cookiecutter.dataset_name }}/.github/: ci.yaml
huggingface-datasets_{{ cookiecutter.dataset_name }}/.github/workflows/: ci.yaml  push_to_hub.yaml
huggingface-datasets_{{ cookiecutter.dataset_name }}/tests/: {{cookiecutter.dataset_name}}_test.py
test_fixtures/: config.yaml
tests/: bake_test.py
