[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
{% if cookiecutter.datasets_type == "vision" -%}
datasets = {extras = ["vision"], version = "^1.0.0"}
{%- else -%}
datasets = "^1.0.0"
{%- endif %}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

