[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
{% if cookiecutter.datasets_type == "vision" -%}
datasets = { extras = ["vision"], version = ">=1.0.0" }
{%- else -%}
datasets = ">=1.0.0"
{%- endif %}

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.0"
black = ">=22.1.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
ignore_missing_imports = true
no_strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

